<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsViewController" customModule="App" customModuleProvider="target">
            <connections>
                <outlet property="logoutButton" destination="K5d-ix-pvD" id="vFZ-9M-tBY"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                <outlet property="welcomeLabel" destination="2Qw-NA-7ap" id="fJR-YE-BmY"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K5d-ix-pvD">
                    <rect key="frame" x="16" y="611" width="343" height="40"/>
                    <accessibility key="accessibilityConfiguration" identifier="LogOutButton"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="lMf-On-qkV"/>
                    </constraints>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
                    <connections>
                        <action selector="didPressLogout:" destination="-1" eventType="primaryActionTriggered" id="nHd-Yn-RW9"/>
                    </connections>
                </button>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Qw-NA-7ap">
                    <rect key="frame" x="16" y="36" width="343" height="20.5"/>
                    <accessibility key="accessibilityConfiguration" identifier="WelcomeLabel"/>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
            </subviews>
            <viewLayoutGuide key="safeArea" id="D8g-i3-TXb"/>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="SettingsViewController"/>
            <constraints>
                <constraint firstItem="2Qw-NA-7ap" firstAttribute="leading" secondItem="D8g-i3-TXb" secondAttribute="leading" constant="16" id="98g-FW-hRr"/>
                <constraint firstItem="D8g-i3-TXb" firstAttribute="bottom" secondItem="K5d-ix-pvD" secondAttribute="bottom" constant="16" id="9lF-jP-Fq2"/>
                <constraint firstItem="D8g-i3-TXb" firstAttribute="trailing" secondItem="K5d-ix-pvD" secondAttribute="trailing" constant="16" id="NjI-2T-TfJ"/>
                <constraint firstItem="K5d-ix-pvD" firstAttribute="leading" secondItem="D8g-i3-TXb" secondAttribute="leading" constant="16" id="PoR-VU-bWO"/>
                <constraint firstItem="2Qw-NA-7ap" firstAttribute="top" secondItem="D8g-i3-TXb" secondAttribute="top" constant="16" id="Pxv-aG-1sR"/>
                <constraint firstItem="D8g-i3-TXb" firstAttribute="trailing" secondItem="2Qw-NA-7ap" secondAttribute="trailing" constant="16" id="Y6c-bM-eRE"/>
            </constraints>
            <point key="canvasLocation" x="-394" y="-13"/>
        </view>
    </objects>
</document>
